--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
-    "next": "15.4.1",
+    "next": "^15.5.7",
     "next-seo": "^6.8.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
