--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "dotenv": "^17.2.1",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
-    "next": "^15.5.7",
+    "next": "15.5.9",
     "next-seo": "^6.8.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
     "react-intersection-observer": "^9.16.0",
     "three": "^0.178.0"
